--- a/requirements_win.txt
+++ b/requirements_win.txt
@@ -13,9 +13,14 @@ scipy==1.7.3
 sounddevice==0.4.5
 SoundFile==0.10.3.post1
 starlette==0.19.1
+--extra-index-url https://download.pytorch.org/whl/cu116
+torch==1.12.0+cu116 
+torchvision==0.13.0+cu116 
+torchaudio==0.12.0 
 tqdm==4.63.0
 scikit-maad
 praat-parselmouth
+matplotlib
 onnx
 onnxsim
 onnxoptimizer
